; ModuleID = '/home/carl/AnghaBench/libgit2/fuzzers/extr_download_refs_fuzzer.c_fuzzer_subtransport_action.c'
source_filename = "/home/carl/AnghaBench/libgit2/fuzzers/extr_download_refs_fuzzer.c_fuzzer_subtransport_action.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fuzzer_subtransport = type { i32 }
%struct.fuzzer_stream = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32**, i32*, i8*, i8*)* @fuzzer_subtransport_action to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @fuzzer_subtransport_action(i32** %0, i32* %1, i8* %2, i8* %3) #0 {
  %5 = alloca i32**, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca %struct.fuzzer_subtransport*, align 8
  store i32** %0, i32*** %5, align 8
  store i32* %1, i32** %6, align 8
  store i8* %2, i8** %7, align 8
  store i8* %3, i8** %8, align 8
  %10 = load i32*, i32** %6, align 8
  %11 = bitcast i32* %10 to %struct.fuzzer_subtransport*
  store %struct.fuzzer_subtransport* %11, %struct.fuzzer_subtransport** %9, align 8
  %12 = load i8*, i8** %7, align 8
  %13 = call i32 @UNUSED(i8* %12)
  %14 = load i8*, i8** %8, align 8
  %15 = call i32 @UNUSED(i8* %14)
  %16 = load i32**, i32*** %5, align 8
  %17 = bitcast i32** %16 to %struct.fuzzer_stream**
  %18 = load %struct.fuzzer_subtransport*, %struct.fuzzer_subtransport** %9, align 8
  %19 = getelementptr inbounds %struct.fuzzer_subtransport, %struct.fuzzer_subtransport* %18, i32 0, i32 0
  %20 = call i32 @fuzzer_stream_new(%struct.fuzzer_stream** %17, i32* %19)
  ret i32 %20
}

declare dso_local i32 @UNUSED(i8*) #1

declare dso_local i32 @fuzzer_stream_new(%struct.fuzzer_stream**, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
